--- a/exercise/templates/exercise/staff/analytics.html
+++ b/exercise/templates/exercise/staff/analytics.html
@@ -76,7 +76,7 @@
 	<div id="llama-view-table">
 		<div class="btn-group">
 			<a class="btn btn-light btn-sm" href="#">
-				<i class="bi-download-alt" aria-hidden="true"></i>
+				<i class="bi-download" aria-hidden="true"></i>
 				{% translate "DOWNLOAD_CSV" %}
 			</a>
 			<button type="button" class="btn btn-light btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
